--- a/nge-harvester.tex
+++ b/nge-harvester.tex
@@ -163,7 +163,7 @@ used to report back the status of these jobs.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.49\textwidth]{figures/panda-harvester-overview.pdf}
+  \includegraphics[width=0.30\textwidth]{figures/panda-harvester-overview-color.png}
   \caption{Harvester architecture.}
   \label{fig:harvester-architecture}
 \end{figure}
